--- a/package.json
+++ b/package.json
@@ -6,16 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Long-Hold/node-cli-template.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/Long-Hold/node-cli-template/issues"
-  },
-  "homepage": "https://github.com/Long-Hold/node-cli-template#readme"
+  "type": "commonjs"
 }
